# hypricons

./: README.md  hyprpm.toml  meson.build
src/: IconLookup.cpp  IconLookup.hpp  IconOverlay.cpp  IconOverlay.hpp  IconPassElement.cpp  IconPassElement.hpp  globals.hpp  main.cpp
